<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.cyberryan1</groupId>
    <artifactId>Netuno</artifactId>
    <version>2.0.0-DEV-0</version>
    <packaging>jar</packaging>

    <name>Netuno</name>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.1</version>
                <!-- bStats -->
                <configuration>
                    <relocations>
                        <relocation>
                            <pattern>org.bstats</pattern>
                            <shadedPattern>com.github.cyberryan1.netuno</shadedPattern> <!-- May want to change this to com.github.cyberryan1.netuno.bstats? -->
                        </relocation>
                    </relocations>
                </configuration>
                <!-- End of bStats -->
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.3.1</version>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
            <resource>
                <directory>src/main/resources/guis</directory>
            </resource>
        </resources>
    </build>

    <repositories>
<!--        <repository>-->
<!--            <id>spigotmc-repo</id>-->
<!--            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>-->
<!--        </repository>-->
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>maven-central</id>
            <url>https://oss.sonatype.org/content/groups/public</url>
        </repository>
        <repository>
            <id>aikar</id>
            <url>https://ci.emc.gs/nexus/content/groups/aikar/</url>
        </repository>
        <repository> <!-- Skript -->
            <id>skript-releases</id>
            <name>Skript Repository</name>
            <url>https://repo.skriptlang.org/releases</url>
        </repository>
        <repository> <!-- Skript -->
            <id>destroystokyo-repo</id>
            <url>https://repo.destroystokyo.com/content/repositories/snapshots/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.21.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-api</artifactId>
            <version>4.16.0</version>
        </dependency>
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.SkriptLang</groupId>
            <artifactId>Skript</artifactId>
            <version>dev37c</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.30</version>
        </dependency>
        <!-- Disabled for now -->
<!--        <dependency>-->
<!--            <groupId>com.github.cyberryan1</groupId>-->
<!--            <artifactId>NetunoAPI</artifactId>-->
<!--            <version>0.1.2.2.DEV.22</version>-->
<!--        </dependency>-->
        <dependency>
            <groupId>com.github.cyberryan1.CyberCore.spigot</groupId>
            <artifactId>CyberCore-spigot</artifactId>
            <version>2.0.0.34</version>
        </dependency>
        <!--
       Above dependency used to be:
       <dependency>
            <groupId>com.github.cyberryan1</groupId>
            <artifactId>CyberCore</artifactId>
            <version>2.0.0.33-DEV-1</version>
        </dependency>
        I do not understand why this fixes it
        -->
<!--        <dependency> &lt;!&ndash; For some reason this is imported twice, probably don't want to do that&ndash;&gt;-->
<!--            <groupId>net.kyori</groupId>-->
<!--            <artifactId>adventure-api</artifactId>-->
<!--            <version>4.15.0</version>-->
<!--        </dependency>-->
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>3.0.2</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
</project>